[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/tooltip.png" type="Texture" id=1]
[ext_resource path="res://Tooltip.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFontData" id=5]
antialiased = false
font_path = "res://BBSesque.ttf"

[sub_resource type="DynamicFont" id=3]
extra_spacing_bottom = -4
extra_spacing_space = -1
font_data = SubResource( 5 )

[node name="Tooltip" type="PopupPanel"]
margin_right = 120.0
margin_bottom = 59.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
script = ExtResource( 2 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 3.0
margin_right = -4.0
margin_bottom = -3.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
margin_right = 109.0
margin_bottom = 53.0
mouse_filter = 2

[node name="Label1" type="RichTextLabel" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_right = 109.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
mouse_filter = 2
size_flags_stretch_ratio = 0.5
custom_colors/default_color = Color( 0.0196078, 0.0235294, 0.027451, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
meta_underlined = false
fit_content_height = true
scroll_active = false

[node name="Label2" type="RichTextLabel" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 109.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 15 )
mouse_filter = 2
size_flags_stretch_ratio = 0.5
custom_colors/default_color = Color( 0.0196078, 0.0235294, 0.027451, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
meta_underlined = false
scroll_active = false

[node name="Label3" type="RichTextLabel" parent="NinePatchRect/MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 109.0
margin_bottom = 53.0
rect_min_size = Vector2( 0, 15 )
mouse_filter = 2
custom_colors/default_color = Color( 0.0196078, 0.0235294, 0.027451, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
meta_underlined = false
scroll_active = false
